[gd_scene load_steps=2 format=2]

[ext_resource path="res://SettingsMenu.gd" type="Script" id=1]

[node name="SettingsMenu" type="Popup"]
pause_mode = 2
margin_right = 566.0
margin_bottom = 400.0
rect_min_size = Vector2( 500, 400 )
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 566.0
margin_bottom = 400.0
rect_min_size = Vector2( 566, 400 )
color = Color( 0, 0.498039, 0.74902, 1 )

[node name="SettingTabs" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0

[node name="Vídeo" type="Tabs" parent="SettingTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="SettingTabs/Vídeo"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="VideoSettings" type="GridContainer" parent="SettingTabs/Vídeo/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 545.0
margin_bottom = 339.0
columns = 2

[node name="ModoExibicao" type="Label" parent="SettingTabs/Vídeo/MarginContainer/VideoSettings"]
margin_top = 3.0
margin_right = 116.0
margin_bottom = 17.0
text = "Modo de Exibição:"

[node name="ExibicaoButton" type="OptionButton" parent="SettingTabs/Vídeo/MarginContainer/VideoSettings"]
margin_left = 454.0
margin_right = 520.0
margin_bottom = 20.0
size_flags_horizontal = 10
text = "Janela"
items = [ "Janela", null, false, 0, null, "Tela cheia", null, false, 1, null ]
selected = 0

[node name="Brilho" type="Label" parent="SettingTabs/Vídeo/MarginContainer/VideoSettings"]
margin_top = 25.0
margin_right = 116.0
margin_bottom = 39.0
text = "Brilho:"

[node name="BrilhoSlider" type="HSlider" parent="SettingTabs/Vídeo/MarginContainer/VideoSettings"]
margin_left = 120.0
margin_top = 24.0
margin_right = 520.0
margin_bottom = 40.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1

[node name="Áudio" type="Tabs" parent="SettingTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="SettingTabs/Áudio"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="AudioSettings" type="GridContainer" parent="SettingTabs/Áudio/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 541.0
margin_bottom = 339.0
columns = 2

[node name="Mainvolume" type="Label" parent="SettingTabs/Áudio/MarginContainer/AudioSettings"]
margin_top = 1.0
margin_right = 112.0
margin_bottom = 15.0
text = "Volume Principal:"

[node name="MainVolumeSlider" type="HSlider" parent="SettingTabs/Áudio/MarginContainer/AudioSettings"]
margin_left = 116.0
margin_right = 516.0
margin_bottom = 16.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="MusicVolume" type="Label" parent="SettingTabs/Áudio/MarginContainer/AudioSettings"]
margin_top = 21.0
margin_right = 112.0
margin_bottom = 35.0
text = "Volume Música:"

[node name="MusicVolumeSlider" type="HSlider" parent="SettingTabs/Áudio/MarginContainer/AudioSettings"]
margin_left = 116.0
margin_top = 20.0
margin_right = 516.0
margin_bottom = 36.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="Créditos" type="Tabs" parent="SettingTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="SettingTabs/Créditos"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="CreditoSettings" type="GridContainer" parent="SettingTabs/Créditos/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 533.0
margin_bottom = 339.0
columns = 2

[node name="backgroundmenuprincipal" type="Label" parent="SettingTabs/Créditos/MarginContainer/CreditoSettings"]
margin_right = 198.0
margin_bottom = 14.0
text = "Background do menu principal:"

[node name="backgroundmenuprincipal2" type="Label" parent="SettingTabs/Créditos/MarginContainer/CreditoSettings"]
margin_left = 328.0
margin_right = 508.0
margin_bottom = 14.0
size_flags_horizontal = 10
text = "Vexteezy | Aranjuez Medina"

[node name="CloseButton" type="TextureButton" parent="."]
margin_left = 546.0
margin_top = 2.0
margin_right = 558.0
margin_bottom = 17.0
rect_scale = Vector2( 1.42002, 1.3 )

[node name="XButton" type="Label" parent="CloseButton"]
margin_top = 0.769231
margin_right = 11.0
margin_bottom = 14.7692
rect_scale = Vector2( 1.09169, 1.0198 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "X"

[connection signal="item_selected" from="SettingTabs/Vídeo/MarginContainer/VideoSettings/ExibicaoButton" to="." method="_on_ExibicaoButton_item_selected"]
[connection signal="value_changed" from="SettingTabs/Vídeo/MarginContainer/VideoSettings/BrilhoSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="SettingTabs/Áudio/MarginContainer/AudioSettings/MainVolumeSlider" to="." method="_on_MainVolumeSlider_value_changed"]
[connection signal="value_changed" from="SettingTabs/Áudio/MarginContainer/AudioSettings/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
